# backend

./: .env.example  .gitmodules  .pre-commit-config.yaml  README.md  docker-compose.yaml  go.mod  go.sum  makefile  pyproject.toml
app/: databases.py  logging.py  main.py  settings.py
app-deprecated/: databases.py  main.py
app-deprecated/models/: destination.py  pipeline.py  source.py  tenant.py
app-deprecated/repositories/: source_repository.py
app-deprecated/utils/: datetime_utils.py
app/config_mappers/: postgresql_source.py
app/models/: __init__.py  destination.py  pipeline.py  source.py  tenant.py
app/repositories/: __init__.py  source_repository.py
app/schemas/: __init__.py  common.py  source.py
app/services/: __init__.py  source_service.py
cmd/api/: app.go  config.go  main.go
http/: sources.http
internal/app/: app.go
internal/client/: kafka_connect_client.go
internal/config/: config.go
internal/constant/: constant.go
internal/controller/: source_controller.go
internal/controllers/: source_controller.go
internal/db/: db.go
internal/domain/: config_field_md.go  mysql_source.go  postgresql_source.go  source.go  tenant.go  topic.go  user.go
internal/dto/: source_dto.go
internal/entity/: destination_entity.go  pipeline_destination_input_entity.go  pipeline_entity.go  pipeline_transformer_entity.go  pipeline_transformer_input_entity.go  source_entity.go  source_output_entity.go  tag_entity.go  tenant_entity.go  tenant_infra_entity.go  tenant_user_entity.go  (+5 more)
migrations/: 00001_init.sql  strimq.sql
scripts/: jet_from_local.go
(+108 files in other folders)
